# tmdbsdk

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-tests.yml
tests/: test_auth.py
tmdbsdk/: __init__.py  exceptions.py  tmdb_api.py
tmdbsdk/models/: Result.py  __init__.py  movie.py
tmdbsdk/tools/: __init__.py  rest_adapter.py  tools.py
