[metadata]
name = tmdbsdk
version = 0.1.0
author = Josh Odell
author_email = j01101111sh@gmail.com
description = A wrapper library for TMDB
long_description = file: README.md
long_description_content_type = text/markdown
test_suite = tests
url = https://github.com/j01101111sh/tmdbsdk
project_urls =
    Bug Tracker = https://github.com/j01101111sh/pycxone/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
where = 
